{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 632,
  "lineage": "aab043ab-34aa-938c-f332-dfe4f93263d3",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:590332698226:loadbalancer/app/p-app-alb/7c40774413dc9393",
            "arn_suffix": "app/p-app-alb/7c40774413dc9393",
            "desync_mitigation_mode": "defensive",
            "dns_name": "p-app-alb-2001621933.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:590332698226:loadbalancer/app/p-app-alb/7c40774413dc9393",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "p-app-alb",
            "security_groups": [
              "sg-089f8cf1cd1f2c8b2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b068255d07235ee6"
              },
              {
                "subnet_id": "subnet-0d6a1010ecdf833a9"
              },
              {
                "subnet_id": "subnet-0e2626d0265ddf9f9"
              }
            ],
            "subnets": [
              "subnet-0b068255d07235ee6",
              "subnet-0d6a1010ecdf833a9",
              "subnet-0e2626d0265ddf9f9"
            ],
            "vpc_id": "vpc-0381e614b0d15df3e",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_subnet.public_subnet_1b",
            "module.vpc.aws_subnet.public_subnet_1c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:590332698226:listener/app/p-app-alb/7c40774413dc9393/1daf6bfae69dd307",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:590332698226:targetgroup/p-app-alb-tg/2a3ee02260d91a62",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:590332698226:listener/app/p-app-alb/7c40774413dc9393/1daf6bfae69dd307",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:590332698226:loadbalancer/app/p-app-alb/7c40774413dc9393",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.alb_tg",
            "module.security.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_subnet.public_subnet_1b",
            "module.vpc.aws_subnet.public_subnet_1c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:590332698226:targetgroup/p-app-alb-tg/2a3ee02260d91a62",
            "arn_suffix": "targetgroup/p-app-alb-tg/2a3ee02260d91a62",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:590332698226:targetgroup/p-app-alb-tg/2a3ee02260d91a62",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "p-app-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0381e614b0d15df3e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:590332698226:security-group/sg-089f8cf1cd1f2c8b2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089f8cf1cd1f2c8b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "p-app-lb-sg",
            "name_prefix": "",
            "owner_id": "590332698226",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0381e614b0d15df3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:590332698226:security-group/sg-07696ab197cd11be6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07696ab197cd11be6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-089f8cf1cd1f2c8b2"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "p-app-ecs-sg",
            "name_prefix": "",
            "owner_id": "590332698226",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0381e614b0d15df3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:590332698226:internet-gateway/igw-09f0ae32b4a311589",
            "id": "igw-09f0ae32b4a311589",
            "owner_id": "590332698226",
            "tags": {
              "Name": "p-app-igw"
            },
            "tags_all": {
              "Name": "p-app-igw"
            },
            "vpc_id": "vpc-0381e614b0d15df3e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:590332698226:route-table/rtb-029dbdf50b94a9fb9",
            "id": "rtb-029dbdf50b94a9fb9",
            "owner_id": "590332698226",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "p-app-rt-private"
            },
            "tags_all": {
              "Name": "p-app-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0381e614b0d15df3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:590332698226:route-table/rtb-02460794a37fc9e9f",
            "id": "rtb-02460794a37fc9e9f",
            "owner_id": "590332698226",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f0ae32b4a311589",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "p-app-rt-public"
            },
            "tags_all": {
              "Name": "p-app-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0381e614b0d15df3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d0d2be5c3951cf9",
            "route_table_id": "rtb-029dbdf50b94a9fb9",
            "subnet_id": "subnet-08ae9f3d95a2847b4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet_1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f702d4cf84e14390",
            "route_table_id": "rtb-029dbdf50b94a9fb9",
            "subnet_id": "subnet-09217f8e82ede08da"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet_1b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b87159390fa6fe0",
            "route_table_id": "rtb-029dbdf50b94a9fb9",
            "subnet_id": "subnet-0851f693a2394f99d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet_1c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04535e3a12ad5e2be",
            "route_table_id": "rtb-02460794a37fc9e9f",
            "subnet_id": "subnet-0b068255d07235ee6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029c8d2fd7750d615",
            "route_table_id": "rtb-02460794a37fc9e9f",
            "subnet_id": "subnet-0e2626d0265ddf9f9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet_1b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a74bedd0d8ccb0c",
            "route_table_id": "rtb-02460794a37fc9e9f",
            "subnet_id": "subnet-0d6a1010ecdf833a9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet_1c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:590332698226:subnet/subnet-08ae9f3d95a2847b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ae9f3d95a2847b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590332698226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "p-app-private-subnet-1a"
            },
            "tags_all": {
              "Name": "p-app-private-subnet-1a"
            },
            "vpc_id": "vpc-0381e614b0d15df3e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:590332698226:subnet/subnet-09217f8e82ede08da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09217f8e82ede08da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590332698226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "p-app-private-subnet-1b"
            },
            "tags_all": {
              "Name": "p-app-private-subnet-1b"
            },
            "vpc_id": "vpc-0381e614b0d15df3e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:590332698226:subnet/subnet-0851f693a2394f99d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0851f693a2394f99d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590332698226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "p-app-private-subnet-1c"
            },
            "tags_all": {
              "Name": "p-app-private-subnet-1c"
            },
            "vpc_id": "vpc-0381e614b0d15df3e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:590332698226:subnet/subnet-0b068255d07235ee6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b068255d07235ee6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590332698226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "p-app-public-subnet-1a"
            },
            "tags_all": {
              "Name": "p-app-public-subnet-1a"
            },
            "vpc_id": "vpc-0381e614b0d15df3e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:590332698226:subnet/subnet-0e2626d0265ddf9f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2626d0265ddf9f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590332698226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "p-app-public-subnet-1b"
            },
            "tags_all": {
              "Name": "p-app-public-subnet-1b"
            },
            "vpc_id": "vpc-0381e614b0d15df3e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:590332698226:subnet/subnet-0d6a1010ecdf833a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6a1010ecdf833a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590332698226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "p-app-public-subnet-1c"
            },
            "tags_all": {
              "Name": "p-app-public-subnet-1c"
            },
            "vpc_id": "vpc-0381e614b0d15df3e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:590332698226:vpc/vpc-0381e614b0d15df3e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ef338f1f95c42cf",
            "default_route_table_id": "rtb-031224200e04f6e04",
            "default_security_group_id": "sg-08d0d578af51514c0",
            "dhcp_options_id": "dopt-0af2b2249d00a7ce6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0381e614b0d15df3e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-031224200e04f6e04",
            "owner_id": "590332698226",
            "tags": {
              "Name": "p-app-vpc"
            },
            "tags_all": {
              "Name": "p-app-vpc"
            }
          }
        }
      ]
    }
  ]
}